# Work-It

./: .dockerignore  .gitignore  README.md  Work It - Load Testing.jmx  aggregator.yml  auth.yml  build.sbt  docker-compose.yml  fitness-dimension.yml  package-lock.json  proxy.yml  social-dimension.yml  training-service.yml  work-it-server.yml
auth-proxy/: Cargo.toml  Dockerfile  package.json  server_config.production.toml
auth-proxy/src/: main.rs  server_config.toml
auth-proxy/src/config/: mod.rs
auth-proxy/src/store/: mod.rs  redis.rs
social-service/: Cargo.toml
social-service/config/: default.toml  development.toml
social-service/src/: lib.rs
social-service/src/application/: mod.rs
social-service/src/application/participant/: .service.rs.rustfmt  dto.rs  errors.rs  mod.rs  service.rs
social-service/src/application/participant/traits/: mod.rs  repository.rs  use_case.rs
social-service/src/application/trainer/: dto.rs  errors.rs  mod.rs  service.rs
social-service/src/application/trainer/traits/: mod.rs  repository.rs  use_case.rs
social-service/src/application/traits/: publisher.rs
social-service/src/application/transformation_request/: errors.rs  mod.rs  service.rs
social-service/src/application/transformation_request/traits/: repository.rs  use_case.rs
social-service/src/domain/: mod.rs
social-service/src/domain/participant/: errors.rs  events.rs  mod.rs  root.rs
social-service/src/domain/participant/errors/: mod.rs
social-service/src/domain/participant/events/: mod.rs
social-service/src/domain/participant/values/: mod.rs  name.rs  (+2 more)
social-service/src/domain/shared/: mod.rs  uuid.rs  validation_helper.rs
social-service/src/domain/trainer/: errors.rs  events.rs  mod.rs  root.rs
social-service/src/domain/transformation_request/: errors.rs  events.rs  mod.rs  root.rs
social-service/src/infrastructure/: mod.rs  publisher.rs
social-service/src/infrastructure/dependencies/: mod.rs  mongodb.rs
social-service/src/infrastructure/errors/: tide.rs
social-service/src/infrastructure/forms/: participant.rs
social-service/src/infrastructure/middlewares/: mod.rs
social-service/src/infrastructure/mongodb/: mod.rs  model.rs  options.rs  repository.rs
social-service/src/infrastructure/publisher/: handler.rs  mod.rs  node.rs
social-service/src/infrastructure/requests/: participant.rs
social-service/src/infrastructure/view_models/: mod.rs  participant.rs  trainer.rs
(+1135 files in other folders)
