[package]
name = "social_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
async-trait = "0.1.57"
chrono = "0.4.22"
futures = "0.3.24"
mockall = "0.11.2"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
tide = { version = "0.16.0", optional = true }
base64 = "0.13.0"

[dependencies.mongodb]
version = "2.3.0"
optional = true
default-features = false
features = ["async-std-runtime", "bson-serde_with"]

[features]
default = ["mongodb", "tide"]
mongodb = ["dep:mongodb"]
tide = ["dep:tide"]

